syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message CityInfo {
	uint32 crystal_num = 1;
	uint32 city_id = 14;
	uint32 level = 11;
}