syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Uint32Pair.proto";


message DungeonEntryInfoReq {
	uint32 point_id = 13;
	uint32 scene_id = 4;
	repeated Uint32Pair scene_point_id_list = 14;
}