syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "DungeonEntryInfo.proto";


message DungeonEntryPointInfo {
	uint32 recommend_dungeon_id = 15;
	uint32 point_id = 12;
	uint32 scene_id = 3;
	repeated DungeonEntryInfo dungeon_entry_list = 5;
}