syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message GetSceneAreaReq {
	uint32 belong_uid = 2;
	uint32 scene_id = 13;
}