syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "CityInfo.proto";


message GetSceneAreaRsp {
	int32 retcode = 8;
	uint32 scene_id = 5;
	repeated uint32 area_id_list = 10;
	repeated CityInfo city_info_list = 14;
}