syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message GetScenePointReq {
	bool is_relogin = 11;
	uint32 belong_uid = 2;
	uint32 scene_id = 8;
}