syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message GetScenePointRsp {
	int32 retcode = 1;
	bool is_relogin = 15;
	uint32 belong_uid = 14;
	uint32 scene_id = 3;
	repeated uint32 unlock_area_list = 2;
	repeated uint32 not_explored_dungeon_entry_list = 9;
	repeated uint32 group_unlimit_point_list = 10;
	repeated uint32 unlocked_point_list = 13;
	repeated uint32 to_be_explore_dungeon_entry_list = 11;
	repeated uint32 not_interact_dungeon_entry_list = 5;
	repeated uint32 unhide_point_list = 6;
	repeated uint32 hide_point_list = 7;
	repeated uint32 locked_point_list = 4;
}