syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "MapLayerInfo.proto";


message PlayerWorldSceneInfo {
	bool is_locked = 3;
	uint32 scene_id = 8;
	MapLayerInfo map_layer_info = 1;
	repeated uint32 scene_tag_id_list = 15;
}