syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message UnfreezeGroupLimitNotify {
	uint32 point_id = 5;
	uint32 scene_id = 14;
}